--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 
-    id "org.jetbrains.kotlin.kapt" version "1.5.30"
+    id "org.jetbrains.kotlin.kapt"
 }
 
 android {
@@ -37,7 +37,6 @@ android {
 }
 
 dependencies {
-
     def room_version = "2.3.0"
 
     implementation 'androidx.core:core-ktx:1.6.0'
