--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AniApp">
         <activity
+            android:name=".ui.activities.AnimeDetailsActivity"
+            android:exported="true"
+            android:label="@string/title_activity_anime_details"
+            android:theme="@style/Theme.AniApp.NoActionBar" />
+        <activity
             android:name=".ui.activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
