--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,8 @@ dependencies {
 
     // AndroidX
     implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
@@ -48,6 +49,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.paging:paging-common-ktx:3.1.0'
 
     // Dependency Injection
     def koin_version= "3.1.2"
@@ -71,6 +73,11 @@ dependencies {
 
     // Parsing
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    // Recycler view
+    def latestFastAdapterRelease = "5.6.0"
+    implementation "com.mikepenz:fastadapter:${latestFastAdapterRelease}"
+    implementation "com.mikepenz:fastadapter-extensions-binding:${latestFastAdapterRelease}" // view binding helpers
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
